fixed the alignment for chapter index page

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -96,6 +96,12 @@ footer {
     background-color: var(--button-color);
 }
 
+/* CHAPTERS INDEX PAGE */
+.chapter-index {
+    height: 80%;
+    padding-top: 10%;
+}
+
 
 /* WRAPPER GRID FOR QUESTION PAGE */
 
